--- a/StyleCopAnalyzersCmd/StyleCopAnalyzersCmd.csproj
+++ b/StyleCopAnalyzersCmd/StyleCopAnalyzersCmd.csproj
@@ -8,6 +8,9 @@
     <AssemblyVersion>1.0.0.1</AssemblyVersion>
     <Version>0.5.0</Version>
   </PropertyGroup>
+  <PropertyGroup>
+    <DefaultItemExcludes>$(DefaultItemExcludes);Sandbox\**</DefaultItemExcludes>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.4.3" />
@@ -20,7 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="2.10.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.1-rc.101">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -34,10 +37,10 @@
 
   <ItemGroup>
     <Reference Include="StyleCop.Analyzers">
-      <HintPath>..\packages\stylecop.analyzers.unstable\1.1.1.101\analyzers\dotnet\cs\StyleCop.Analyzers.dll</HintPath>
+      <HintPath>..\packages\stylecop.analyzers\1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll</HintPath>
     </Reference>
     <Reference Include="StyleCop.Analyzers.CodeFixes">
-      <HintPath>..\packages\stylecop.analyzers.unstable\1.1.1.101\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll</HintPath>
+      <HintPath>..\packages\stylecop.analyzers\1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
