--- a/src/StyleCopAnalyzers.CLI.csproj
+++ b/src/StyleCopAnalyzers.CLI.csproj
@@ -4,7 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CodeAnalysisRuleSet>stylecop.ruleset</CodeAnalysisRuleSet>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
     <AssemblyVersion>1.0.0.1</AssemblyVersion>
     <Version>0.5.0</Version>
   </PropertyGroup>
@@ -14,7 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
-    <PackageReference Include="Microsoft.Build.Locator" Version="1.2.2" />
+    <PackageReference Include="Microsoft.Build.Locator" Version="1.2.6" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.6.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0" />
@@ -23,7 +24,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.6.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.164">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -37,10 +38,10 @@
 
   <ItemGroup>
     <Reference Include="StyleCop.Analyzers">
-      <HintPath>..\packages\stylecop.analyzers\1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll</HintPath>
+      <HintPath>..\packages\stylecop.analyzers.unstable\1.2.0.164\analyzers\dotnet\cs\StyleCop.Analyzers.dll</HintPath>
     </Reference>
     <Reference Include="StyleCop.Analyzers.CodeFixes">
-      <HintPath>..\packages\stylecop.analyzers\1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll</HintPath>
+      <HintPath>..\packages\stylecop.analyzers.unstable\1.2.0.164\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
