--- a/src/StyleCopAnalyzers.CLI.csproj
+++ b/src/StyleCopAnalyzers.CLI.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5</TargetFramework>
     <CodeAnalysisRuleSet>stylecop.ruleset</CodeAnalysisRuleSet>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <AssemblyVersion>1.0.1.1</AssemblyVersion>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
     <PackageId>rookxx.stylecopanalyzers-cli</PackageId>
     <Authors>rookxx</Authors>
     <Title>StyleCop.Analyzers CLI tool</Title>
